2019-1/230/users/4050/executions/1640_1055.log
== TEST (2019-04-15 10:28:10) 
-- CODE:
from math import sin

vo = float(input("Qual a velocidade inicial: "))

R = (vo**2)*(sin*2*a)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    R = (vo**2)*(sin*2*a)
TypeError: unsupported operand type(s) for *: 'builtin_function_or_method' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:48:58) 
-- CODE:
from math import sin
from math import pi
from math import radians

vi = float(input("velocidade "))
ang = radians(float(input"digite "))
D = float(input("a "))
g = 9.8
r1 = v1**2
r2 = sin(2*ang)
r3 = round((ra*r2)/g ,2)
q = abs(D-r3)
if (q < 0.1):
	print("sim")
else:
	print("nao")

-- EXECUTION TIME:
0.22046
-- ERROR:
  File "/home/codebench/codes/1640/1055/main.py", line 6
    ang = radians(float(input"digite "))
                                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:49:15) 
-- CODE:
from math import sin
from math import pi
from math import radians

vi = float(input("velocidade "))
ang = radians(float(input"digite "))
D = float(input("a "))
g = 9.8
r1 = v1**2
r2 = sin(2*ang)
r3 = round((ra*r2)/g ,2)
q = abs(D-r3)
if (q < 0.1):
	print("sim")
else:
	print("nao")

-- ERROR:
File "XXXX", line 6
    ang = radians(float(input"digite "))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:49:48) 
-- CODE:
from math import sin
from math import pi
from math import radians

vi = float(input("velocidade "))
ang = radians(float(input("digite ")))
D = float(input("a "))
g = 9.8
r1 = v1**2
r2 = sin(2*ang)
r3 = round((ra*r2)/g ,2)
q = abs(D-r3)
if (q < 0.1):
	print("sim")
else:
	print("nao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    r1 = v1**2
NameError: name 'v1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:50:21) 
-- CODE:
from math import sin
from math import pi
from math import radians

vi = float(input("velocidade "))
ang = radians(float(input("digite ")))
D = float(input("a "))
g = 9.8
r1 = v1**2
r2 = sin(2*ang)
r3 = round((r1*r2)/g ,2)
q = abs(D-r3)
if (q < 0.1):
	print("sim")
else:
	print("nao")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    r1 = v1**2
NameError: name 'v1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:50:39) 
-- CODE:
from math import sin
from math import pi
from math import radians

v1 = float(input("velocidade "))
ang = radians(float(input("digite ")))
D = float(input("a "))
g = 9.8
r1 = v1**2
r2 = sin(2*ang)
r3 = round((r1*r2)/g ,2)
q = abs(D-r3)
if (q < 0.1):
	print("sim")
else:
	print("nao")

-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:50:44) 
-- CODE:
from math import sin
from math import pi
from math import radians

v1 = float(input("velocidade "))
ang = radians(float(input("digite ")))
D = float(input("a "))
g = 9.8
r1 = v1**2
r2 = sin(2*ang)
r3 = round((r1*r2)/g ,2)
q = abs(D-r3)
if (q < 0.1):
	print("sim")
else:
	print("nao")

-- EXECUTION TIME:
0.15333
-- TEST CASE 1:
---- input:
10.5
45.5
11.3
---- correct output:
sim
---- user output:
sim
-- TEST CASE 2:
---- input:
29.5
17.1
51.0
---- correct output:
nao
---- user output:
nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
